--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,9 @@
   "homepage": "https://github.com/lehongduc200115/netflix-renting#readme",
   "dependencies": {
     "@hapi/hapi": "^20.2.2",
+    "@hapi/inert": "^7.0.0",
     "@hapi/joi": "^17.1.1",
+    "@hapi/vision": "^7.0.0",
     "@types/hapi": "^18.0.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -43,7 +45,12 @@
   },
   "devDependencies": {
     "@types/hapi__hapi": "^20.0.13",
+    "@types/hapi__inert": "^5.2.3",
+    "@types/hapi__joi": "^17.1.8",
+    "@types/hapi__vision": "^5.5.3",
     "@types/lodash": "^4.14.186",
-    "@types/nodemailer": "^6.4.6"
+    "@types/node": "^18.11.10",
+    "@types/nodemailer": "^6.4.6",
+    "hapi-swagger": "^15.0.0"
   }
 }
