--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
     "postbuild": "node copyFile.js --source=.env --destination=dist/.env",
     "build": "tsc",
     "prestart": "node copyFile.js --source=.env.default --destination=.env && npm run build",
-    "start": "node dist/src/server.js",
+    "start": "nodemon dist/src/server.js",
     "start:prof": "npm run prestart && clinic bubbleprof -- node dist/src/server.js",
     "start:flame": "npm run prestart && clinic flame -- node dist/src/server.js"
   },
@@ -33,10 +33,12 @@
     "@types/hapi": "^18.0.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "joi": "^17.6.4",
+    "joi": "^17.7.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.7.0",
     "nodemailer": "^6.8.0",
+    "nodemon": "^2.0.20",
+    "object-id": "^0.0.1",
     "rimraf": "^3.0.2",
     "tsc": "^2.0.4",
     "typescript": "^4.9.3",
