--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,7 +19,13 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "strictNullChecks": false
+    "strictNullChecks": false,
+    "baseUrl": ".",
+    "paths": {
+      "@components": ["src/components"],
+      "@pages": ["src/pages"],
+      "@routes": ["src/routes"],
+    }
   },
   "include": [
     "src"
