--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-flip-numbers": "^3.0.7",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "read-excel-file": "^5.5.3",
     "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
