--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,8 @@
     "read-excel-file": "^5.5.3",
     "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xslx": "^1.0.0"
   },
   "scripts": {
     "start": "craco start",
