--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.10.11",
     "@mui/styled-engine-sc": "^5.10.6",
     "@mui/x-data-grid": "^5.17.9",
+    "@syncfusion/ej2-react-spreadsheet": "^20.4.49",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -27,7 +28,9 @@
     "react-flip-numbers": "^3.0.7",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-spreadsheet": "^0.7.7",
     "read-excel-file": "^5.5.3",
+    "scheduler": "^0.23.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4",
