--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,10 +26,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flip-numbers": "^3.0.7",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-spreadsheet": "^0.7.7",
     "read-excel-file": "^5.5.3",
+    "redux": "^4.2.1",
     "scheduler": "^0.23.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
