--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,10 +20,14 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.3",
+    "jquery": "^3.6.4",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "mui-image": "^1.0.7",
+    "popper.js": "^1.16.1",
     "react": "^18.2.0",
+    "react-bs-notifier": "^7.0.0",
     "react-dom": "^18.2.0",
     "react-flip-numbers": "^3.0.7",
     "react-redux": "^8.0.5",
