--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,16 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: user/app:latest
+          tags: lehongduc200115/multidiscipline_project_2022:latest
+          dockerfile: Dockerfile
           # secrets: "github_token=${{ secrets.GITHUB_TOKEN }}"
+      - name: Pull Docker image
+        run: docker pull lehongduc200115/multidiscipline_project_2022
+      - name: Stop and remove container
+        run: |
+          docker stop da-img-test || true
+          docker rm da-img-test || true
+      - name: Run new container
+        run: docker run -d --name da-img-test -p 3000:3000 lehongduc200115/multidiscipline_project_2022:latest
+        # run: docker run -d --name da-img-test -p 3000:3000 myregistry.example.com/myimage:${{ github.sha }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
