--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,10 +87,10 @@ jobs:
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-          # username: lehongduc200115
-          # password: dckr_pat_xjcXAKJBfMtxsDtwS624U-qnbAs
+          # username: ${{ secrets.DOCKERHUB_USERNAME }}
+          # password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: lehongduc200115
+          password: dckr_pat_xjcXAKJBfMtxsDtwS624U-qnbAs
   build: 
     name: Build and Push onto Dockerhub
     runs-on: ubuntu-latest
