--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,11 +91,11 @@ jobs:
           # password: ${{ secrets.DOCKERHUB_TOKEN }}
           username: lehongduc200115
           password: dckr_pat_kvwI-DlDXSQLe4NybGu0Y-bkQkk
-  build: 
-    name: Build and Push onto Dockerhub
-    runs-on: ubuntu-latest
-    needs: prepare
-    steps:
+  # build: 
+  #   name: Build and Push onto Dockerhub
+  #   runs-on: ubuntu-latest
+  #   needs: prepare
+  #   steps:
       -
         name: Build and push
         uses: docker/build-push-action@v4
