--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -103,11 +103,11 @@ jobs:
           push: true
           tags: lehongduc200115/multidiscipline_project_2022:latest
           dockerfile: Dockerfile
-  deploy: 
-    name: Deploy to EC2 instance
-    runs-on: ubuntu-latest
-    needs: prepare
-    steps:
+  # deploy: 
+  #   name: Deploy to EC2 instance
+  #   runs-on: ubuntu-latest
+  #   needs: prepare
+  #   steps:
       - name: Deploy to EC2 instance
         uses: appleboy/ssh-action@master
         with:
