--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "This repo contains netflixRenting project. Nice to meet you!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
     "postbuild": "node copyFile.js --source=.env --destination=dist/.env",
@@ -32,7 +32,9 @@
     "@hapi/joi": "^17.1.1",
     "@hapi/vision": "^7.0.0",
     "@types/hapi": "^18.0.7",
+    "cls-hooked": "^4.2.2",
     "dotenv": "^16.0.3",
+    "expose-gc": "^1.0.0",
     "express": "^4.18.2",
     "joi": "^17.7.0",
     "lodash": "^4.17.21",
@@ -47,13 +49,17 @@
     "yargs": "^17.6.0"
   },
   "devDependencies": {
+    "@types/cls-hooked": "^4.3.3",
     "@types/hapi__hapi": "^20.0.13",
     "@types/hapi__inert": "^5.2.3",
     "@types/hapi__joi": "^17.1.8",
     "@types/hapi__vision": "^5.5.3",
+    "@types/jest": "^29.5.1",
     "@types/lodash": "^4.14.186",
     "@types/node": "^18.11.10",
     "@types/nodemailer": "^6.4.6",
-    "hapi-swagger": "^15.0.0"
+    "hapi-swagger": "^15.0.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0"
   }
 }
